force-app/main/default/objects/Product__c/Product__c.object-meta.xml
<CustomObject>
    <label>製品</label>
    <nameField>
        <label>製品名</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>製品</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>