force-app/main/default/objects/Product__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>カテゴリー</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>マウンテン</fullName>
            </value>
            <value>
                <fullName>コミューター</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>