force-app/main/default/objects/Product__c/fields/Charger__c.field-meta.xml
<CustomField>
    <fullName>Charger__c</fullName>
    <label>充電器</label>
    <length>100</length>
    <type>Text</type>
</CustomField>