force-app/main/default/objects/Product__c/fields/Fork__c.field-meta.xml
<CustomField>
    <fullName>Fork__c</fullName>
    <label>フォーク</label>
    <length>100</length>
    <type>Text</type>
</CustomField>