force-app/main/default/objects/Product__c/fields/Level__c.field-meta.xml
<CustomField>
    <fullName>Level__c</fullName>
    <label>レベル</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>初心者</fullName>
            </value>
            <value>
                <fullName>愛好家</fullName>
            </value>
            <value>
                <fullName>レーサー</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>