force-app/main/default/objects/Product__c/fields/Material__c.field-meta.xml
<CustomField>
    <fullName>Material__c</fullName>
    <label>素材</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>アルミニウム</fullName>
            </value>
            <value>
                <fullName>カーボン</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>