force-app/main/default/objects/Product__c/fields/MSRP__c.field-meta.xml
<CustomField>
    <fullName>MSRP__c</fullName>
    <label>メーカー希望小売価格</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>